--- a/public/slide-viewer/js/directives/sa-annotationzone.html
+++ b/public/slide-viewer/js/directives/sa-annotationzone.html
@@ -1,1 +1,1 @@
-<div  movable can-move="true" style="background-color:yellow;height:100px;width:100px;"></div>
+<div movable style="background-color:yellow;height:100px;width:100px;" ></div>
