--- a/public/video-annotations/scripts/directives/va-annotation/va-annotation.html
+++ b/public/video-annotations/scripts/directives/va-annotation/va-annotation.html
@@ -19,7 +19,9 @@
     <footer id="comments">
         <article>
             <section ng-repeat="comment in source.comments">
-                <p>[{{comment.author}}] {{comment.text}} [<a ng-click="removeComment(comment._id)" type="submit">x</a>]</p>
+                <p>[{{comment.author}}] {{comment.text}}
+                    <a ng-show="comment.isAuthor" ng-click="removeComment(comment._id)" type="submit">[x]</a>
+                </p>
             </section>
         </article>
         <div id="comment-box">
