--- a/public/video-annotations/scripts/directives/va-widget/va-widget.html
+++ b/public/video-annotations/scripts/directives/va-widget/va-widget.html
@@ -1,58 +1,46 @@
-<div class="col-sm-6">
-    <videogular vg-player-ready="onPlayerReady($API)" vg-cue-points="cuePoints">
-        <vg-media vg-src="sources"></vg-media>
-        <vg-controls>
-            <vg-play-pause-button></vg-play-pause-button>
-            <vg-time-display>{{ currentTime | date:'HH:mm:ss':'UTC' }}</vg-time-display>
-            <vg-scrub-bar>
-                <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
-            </vg-scrub-bar>
-            <vg-time-display>{{ totalTime | date:'HH:mm:ss':'UTC'}}</vg-time-display>
-            <vg-volume>
-                <vg-mute-button></vg-mute-button>
-                <vg-volume-bar></vg-volume-bar>
-            </vg-volume>
-            <vg-fullscreen-button></vg-fullscreen-button>
-        </vg-controls>
-        <!-- <vg-overlay-play></vg-overlay-play> -->
-        <div id="inline-va-container">
-            <div movable
-                 can-move="{{selectedAnnotation == item}}"
-                 on-moved="item.reposition"
-                 ng-repeat="item in annotations | filter:{type: 'embedded-note'}"
-                 class="inline-va-annotation"
-                 ng-show="item.showing"
-                 ng-style="{
+<div class="row">
+    <div class="col-sm-6">
+        <videogular vg-player-ready="onPlayerReady($API)" vg-cue-points="cuePoints">
+            <vg-media vg-src="sources"></vg-media>
+            <vg-controls>
+                <vg-play-pause-button></vg-play-pause-button>
+                <vg-time-display>{{ currentTime | date:'HH:mm:ss':'UTC' }}</vg-time-display>
+                <vg-scrub-bar>
+                    <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
+                </vg-scrub-bar>
+                <vg-time-display>{{ totalTime | date:'HH:mm:ss':'UTC'}}</vg-time-display>
+                <vg-volume>
+                    <vg-mute-button></vg-mute-button>
+                    <vg-volume-bar></vg-volume-bar>
+                </vg-volume>
+                <vg-fullscreen-button></vg-fullscreen-button>
+            </vg-controls>
+            <!-- <vg-overlay-play></vg-overlay-play> -->
+            <div id="inline-va-container">
+                <div movable can-move="{{selectedAnnotation == item}}" on-moved="item.reposition" ng-repeat="item in annotations | filter:{type: 'embedded-note'}" class="inline-va-annotation" ng-show="item.showing" ng-style="{
                     top: item.position.top + '%',
                     left: item.position.left + '%',
                     width: item.size.width + '%',
                     height: item.size.height + '%'}">
-                <span>{{item.text}}</span>
+                    <span>{{item.text}}</span>
+                </div>
             </div>
-        </div>
-    </videogular>
+        </videogular>
+    </div>
+    <div class="col-sm-6">
+        <label for="search-box">Search:</label>
+        <input id="search-box" ng-model="query">
+        <section ng-show="annotations.length > 0" class="annotations-viewer">
+            <video-annotation ng-repeat="annotation in annotations | filter:query" source="annotation" ng-class="{showing: annotation.showing, completed: annotation.completed}" ng-click="seekPosition(annotation)"></video-annotation>
+        </section>
+    </div>
 </div>
-<div class="col-sm-6">
+<div class="row">
     <button type="button" ng-click="createAnnotation()">Add annotation</button>
     <br/>
     <label for="editor-select">Edit annotation:</label>
-    <select ng-model="selectedAnnotation"
-            id="editor-select"
-            ng-change="seekPosition(selectedAnnotation)"
-            ng-options="ann as ann.text | limitTo:25 for ann in annotations | filter:{isAuthor: true}"
-            ng-show="annotations.length > 0">
+    <select ng-model="selectedAnnotation" id="editor-select" ng-change="seekPosition(selectedAnnotation)" ng-options="ann as ann.text | limitTo:25 for ann in annotations | filter:{isAuthor: true}" ng-show="annotations.length > 0">
     </select>
-
     <va-editor ng-show="selectedAnnotation != null" annotation="selectedAnnotation"></va-editor>
     <br/>
-
-    <label for="search-box">Search:</label>
-    <input id="search-box" ng-model="query">
-    <section ng-show="selectedAnnotation == null && annotations.length > 0" class="annotations-viewer">
-     
-
-        <video-annotation ng-repeat="annotation in annotations | filter:query" source="annotation"
-                          ng-class="{showing: annotation.showing, completed: annotation.completed}"
-                          ng-click="seekPosition(annotation)"></video-annotation>
-    </section>
 </div>
