--- a/public/video-annotations/scripts/directives/va-annotation/va-annotation.html
+++ b/public/video-annotations/scripts/directives/va-annotation/va-annotation.html
@@ -37,7 +37,7 @@
                 <a class="btn btn-primary btn-xs" ng-click="saveAnnotation()">SAVE</a>
             </div>
             <div class="deleteReplyButton">
-                <a ng-click="source.isEditMode=false" class="btn btn-danger btn-xs">CLOSE</a>
+                <a ng-click="closeAnnotation()" class="btn btn-danger btn-xs">CLOSE</a>
             </div>
         </div>
         <div id="comments">
