--- a/public/video-annotations/scripts/directives/va-widget/va-widget.html
+++ b/public/video-annotations/scripts/directives/va-widget/va-widget.html
@@ -16,11 +16,17 @@
                 <vg-fullscreen-button></vg-fullscreen-button>
             </vg-controls>
             <div id="inline-va-container">
-                <div movable can-move="{{item.isEditMode===true}}" on-moved="item.reposition" ng-repeat="item in annotations | filter:{type: 'embedded-note'}" class="inline-va-annotation" ng-show="item.showing" ng-style="{
-                    top: item.position.top + '%',
-                    left: item.position.left + '%',
-                    width: item.size.width + '%',
-                    height: item.size.height + '%'}">
+                <div movable 
+                     can-move="{{item.isEditMode===true}}" 
+                     on-moved="item.reposition" 
+                     ng-repeat="item in annotations | filter:{type: 'embedded-note'}" 
+                     class="inline-va-annotation" 
+                     ng-show="item.showing"
+                     ng-style="{
+                        top: item.position.top + '%',
+                        left: item.position.left + '%',
+                        width: item.size.width + '%',
+                        height: item.size.height + '%'}">
                     <span>{{item.text}}</span>
                 </div>
             </div>
