--- a/public/video-annotations/scripts/directives/va-annotation/va-annotation.html
+++ b/public/video-annotations/scripts/directives/va-annotation/va-annotation.html
@@ -22,9 +22,12 @@
         </select>
         <br/>
 
-        <!--<timepicker time="{{source.start}}"></timepicker>-->
-        <label for="va-start">Start:</label>
-        <input id="va-start" ng-model="source.start">
+        <timepicker time="source.start"></timepicker>
+        <br/>
+
+        <!--<label for="va-start">Start:</label>-->
+        <!--<input id="va-start" ng-model="source.start">-->
+
         <label for="va-end">End:</label>
         <input id="va-end" ng-model="source.end">
     </div>
