--- a/public/video-annotations/scripts/directives/va-widget/va-widget.html
+++ b/public/video-annotations/scripts/directives/va-widget/va-widget.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-sm-8">
+    <div class="col-xs-8">
         <videogular vg-player-ready="onPlayerReady($API)" vg-cue-points="cuePoints">
             <vg-media vg-src="sources"></vg-media>
             <vg-controls>
@@ -32,7 +32,7 @@
             </div>
         </videogular>
     </div>
-    <div class="col-sm-4 replies">
+    <div class="col-xs-4 replies">
         <button class="btn btn-primary btn-xs" ng-click="createAnnotation()">Add annotation</button>
         <input id="search-box" placeholder="Search..." ng-model="query">
         <section ng-show="annotations.length > 0" class="annotations-viewer">
