--- a/public/video-annotations/scripts/directives/va-annotation/va-annotation.html
+++ b/public/video-annotations/scripts/directives/va-annotation/va-annotation.html
@@ -65,7 +65,8 @@
                         <div class="box-footer">
                             <div class="replyControl">
                                 <a style="cursor: pointer;" ng-show="comment.isAuthor"
-                                   ng-click="removeComment(comment._id)" title="delete" class="btn btn-danger btn-xs">DELETE</a>
+                                   ng-click="removeComment(comment._id)" title="delete"
+                                   class="btn btn-danger btn-xs">DELETE</a>
                             </div>
                         </div>
                     </div>
