--- a/public/video-annotations/scripts/directives/va-widget/va-widget.html
+++ b/public/video-annotations/scripts/directives/va-widget/va-widget.html
@@ -42,7 +42,7 @@
         <section id="annotations-view" ng-show="annotations.length > 0">
             <video-annotation ng-repeat="annotation in annotations | filter:query" source="annotation"
                               ng-class="{showing: annotation.showing, completed: annotation.completed}"
-                              ng-click="seekPosition(annotation)"></video-annotation>
+                              ></video-annotation>
         </section>
     </div>
 </div>
