add text to the annzone button

--- a/public/angular-quill/angular-quill-pdf-comment.html
+++ b/public/angular-quill/angular-quill-pdf-comment.html
@@ -24,7 +24,11 @@
                 <option value="justify" label="Justify"></option>
             </select>
             <span class="ql-format-separator"></span>
-            <span title="Annotation Zone" class="ql-format-button ion-ios-grid-view-outline" ng-click="annotationZoneAction()"></span>
+            <span title="Annotation Zone" class="ql-format-button ion-ios-grid-view-outline"
+                  ng-click="annotationZoneAction()"></span>
+            <span title="Annotation Zone" class="ql-text-info" style="cursor: pointer"
+                  ng-click="annotationZoneAction()">Draw Annotation Zone
+                </span>
 
         </span>
 
