--- a/public/video-annotations/scripts/directives/va-widget/va-widget.html
+++ b/public/video-annotations/scripts/directives/va-widget/va-widget.html
@@ -16,13 +16,7 @@
                 <vg-fullscreen-button></vg-fullscreen-button>
             </vg-controls>
             <div id="inline-va-container">
-                <div movable
-                     can-move="{{item.isEditMode===true}}"
-                     on-moved="item.reposition"
-                     ng-repeat="item in annotations | filter:{type: 'embedded-note'}"
-                     class="inline-va-annotation"
-                     ng-show="item.showing"
-                     ng-style="{
+                <div movable can-move="{{item.isEditMode===true}}" on-moved="item.reposition" ng-repeat="item in annotations | filter:{type: 'embedded-note'}" class="inline-va-annotation" ng-show="item.showing" ng-style="{
                         top: item.position.top + '%',
                         left: item.position.left + '%',
                         width: item.size.width + '%',
@@ -35,14 +29,20 @@
     <div class="col-xs-4 replies">
         <div class="panel panel-default">
             <div class="panel-body">
-                <button class="btn btn-primary btn-md" ng-click="createAnnotation()">Add annotation</button>
-                <input class="form-control" id="search-box" placeholder="Search..." ng-model="query">
+                <button class="col-xs-4 btn btn-primary btn-md" ng-click="createAnnotation()">Annotate</button>
+                <div class="col-xs-8">
+                    <select class="form-control" ng-model="sortBy">
+                        <option value="" selected disabled>-- Sort by --</option>
+                        <option value="start">Start time</option>
+                        <option value="text">Alphabetical</option>
+                        <option value="author">Author</option>
+                    </select>
+                    <input class="form-control" id="search-box" placeholder="Search..." ng-model="query">
+                </div>
             </div>
         </div>
         <section id="annotations-view" ng-show="annotations.length > 0">
-            <video-annotation ng-repeat="annotation in annotations | filter:query" source="annotation"
-                              ng-class="{showing: annotation.showing, completed: annotation.completed}"
-                              ></video-annotation>
+            <video-annotation ng-repeat="annotation in annotations | filter:query | orderBy:sortBy" source="annotation" ng-class="{showing: annotation.showing, completed: annotation.completed}"></video-annotation>
         </section>
     </div>
 </div>
