--- a/public/video-annotations/scripts/directives/va-annotation/va-annotation.html
+++ b/public/video-annotations/scripts/directives/va-annotation/va-annotation.html
@@ -12,8 +12,7 @@
         </div>
     </div>
     <div class="box-body form-group" ng-show="source.isEditMode">
-        <textarea placeholder="Start annotating..." class="form-control" rows="3" id="va-text" type="text"
-                  ng-model="source.text"></textarea>
+        <textarea placeholder="Start annotating..." class="form-control" rows="3" id="va-text" type="text" ng-model="source.text"></textarea>
         <br/>
         <select class="form-control" ng-model="source.type">
             <option ng-selected="type.id===source.type" ng-repeat="type in annotationTypes" value="{{type.id}}">
@@ -21,7 +20,6 @@
             </option>
         </select>
         <br/>
-
         <label class="control-label" for="va-start">Start:</label>
         <timepicker id="va-start" ng-model="source.start"></timepicker>
         <label class="control-label" for="va-end">End:</label>
@@ -62,14 +60,11 @@
                               Posted <strong>{{comment.date_created | relativeDate}}</strong>
                               By <strong><span>{{comment.author}}</span></strong>
                             </span>
-
                             <p class="reply">{{comment.text}}</p>
                         </div>
                         <div class="box-footer">
                             <div class="replyControl">
-                                <a style="cursor: pointer;" ng-show="comment.isAuthor"
-                                   ng-click="removeComment(comment._id)" title="delete"
-                                   class="btn btn-danger btn-xs">DELETE</a>
+                                <a style="cursor: pointer;" ng-show="comment.isAuthor" ng-click="removeComment(comment._id)" title="delete" class="btn btn-danger btn-xs">DELETE</a>
                             </div>
                         </div>
                     </div>
