--- a/public/video-annotations/scripts/directives/va-widget/va-widget.html
+++ b/public/video-annotations/scripts/directives/va-widget/va-widget.html
@@ -37,7 +37,7 @@
                         <option value="text">Alphabetical</option>
                         <option value="author">Author</option>
                     </select>
-                    <input class="form-control" id="search-box" placeholder="Search..." ng-model="query">
+                    <input class="form-control" id="search-box" ng-hide="hideSearch" placeholder="Search..." ng-model="query">
                 </div>
             </div>
         </div>
