--- a/public/video-annotations/scripts/directives/va-annotation/va-annotation.html
+++ b/public/video-annotations/scripts/directives/va-annotation/va-annotation.html
@@ -28,7 +28,7 @@
     </div>
     <div class="box-footer">
         <div ng-show="source.isAuthor && !source.isEditMode" class="replyControl">
-            <div>
+            <div style="float:left;">
                 <span>[{{source.start | msToTime}}] - [{{source.end | msToTime}}]</span>
             </div>
             <div class="editReplyButton">
