show commenting area in new directive

--- a/public/angular-quill/angular-quill-pdf-comment.html
+++ b/public/angular-quill/angular-quill-pdf-comment.html
@@ -25,8 +25,10 @@
             </select>
             <span class="ql-format-separator"></span>
             <span title="Annotation Zone" class="ql-format-button ion-ios-grid-view-outline"
+                  ng-hide="hideAnnZoneButton"
                   ng-click="annotationZoneAction()"></span>
             <span title="Annotation Zone" class="ql-text-info" style="cursor: pointer"
+                  ng-hide="hideAnnZoneButton"
                   ng-click="annotationZoneAction()">Draw Annotation Zone
                 </span>
 
