--- a/public/video-annotations/scripts/directives/va-widget/va-widget.html
+++ b/public/video-annotations/scripts/directives/va-widget/va-widget.html
@@ -1,7 +1,7 @@
 <div class="col-md-7">
     <videogular vg-player-ready="onPlayerReady($API)" vg-cue-points="cuePoints">
         <vg-media vg-src="sources"></vg-media>
-        <vg-controls>
+        <vg-controls vg-autohide="true" vg-autohide-time="3000">
             <vg-play-pause-button></vg-play-pause-button>
             <vg-time-display>{{ currentTime | date:'HH:mm:ss':'UTC' }}</vg-time-display>
             <vg-scrub-bar>
