--- a/public/video-annotations/scripts/directives/va-widget/va-widget.html
+++ b/public/video-annotations/scripts/directives/va-widget/va-widget.html
@@ -14,6 +14,7 @@
             </vg-volume>
             <vg-fullscreen-button></vg-fullscreen-button>
         </vg-controls>
+         <vg-overlay-play></vg-overlay-play>
         <div id="inline-va-container">
             <div movable can-move="{{item.isEditMode===true}}" on-moved="item.reposition" ng-repeat="item in annotations | filter:{type: 'embedded-note'}" class="inline-va-annotation" ng-show="item.showing" ng-style="{
                         top: item.position.top + '%',
